Updates to the implementation and features

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,9 +36,18 @@ APP_ENV=local
 FRONTEND_URL=http://localhost:3000
 
 # =============================================================================
-# OpenAI API Key (Optional)
+# OpenAI API Key (Optional - for AI Email Classification)
 # =============================================================================
 # Only needed if you want AI-powered email classification features
 # Get your API key from: https://platform.openai.com/api-keys
 # Leave blank or comment out if not using AI features
 # OPENAI_API_KEY=sk-proj-your-key-here
+
+# Enable AI classification (requires OPENAI_API_KEY)
+# Set to true to use AI for intelligent email classification
+AI_CLASSIFICATION_ENABLED=false
+
+# Batch size for AI classification (default: 50)
+# Lower values = more API calls but faster feedback
+# Higher values = fewer API calls but slower processing
+CLASSIFICATION_BATCH_SIZE=50
